--- a/pages/page.css
+++ b/pages/page.css
@@ -24,3 +24,5 @@
 @import url(../blocks/elements/__info/elements__info.css);
 @import url(../blocks/elements/__paragraph/elements__paragraph.css);
 @import url(../blocks/elements/__button-like/elements__button-like-active.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
