--- a/pages/page.css
+++ b/pages/page.css
@@ -16,7 +16,6 @@
 @import url(../blocks/profile/__button-add/profile__button-add.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__list/elements__list.css);
 @import url(../blocks/elements/__item/elements__item.css);
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__button-like/elements__button-like.css);
@@ -26,3 +25,11 @@
 @import url(../blocks/elements/__button-like/elements__button-like-active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__heading/popup__heading.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__button-close/popup__button-close.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
