--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,22 +1,24 @@
 .profile__name {
-    max-width: 300px;
-    margin-top: 22px;
-    margin-bottom: 0;
-    font-weight: 500;
-    font-size: 42px;
-    line-height: 48px;
+  max-width: 300px;
+  margin-top: 22px;
+  margin-bottom: 0;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 48px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 890px) {
-    .profile__name {
-        text-align: center;
-    }
+  .profile__name {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 425px) {
-    .profile__name {
-        font-size: 27px;
-        line-height: 33px;
-    }
+  .profile__name {
+    font-size: 27px;
+    line-height: 33px;
+  }
 }
-    
