--- a/blocks/elements/__item/elements__item.css
+++ b/blocks/elements/__item/elements__item.css
@@ -7,5 +7,6 @@
     position: relative;
     width: 100%;
     margin: 0;
-    height: 361px;
+    min-height: 361px;
+    list-style-type: none;
 }
