--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -15,6 +15,6 @@
 @media screen and (max-width: 890px) {
     .popup__container {
         width: 282px;
-        padding-bottom: 39px;
+        min-height: 322px;
     }
 }
