--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -1,22 +1,25 @@
 .profile__profession {
-    max-width: 300px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    margin-top: 16px;
-    margin-bottom: 0;
+  max-width: 300px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  margin-top: 16px;
+  margin-bottom: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 890px) {
-    .profile__profession {
-        text-align: center;
-    }
+  .profile__profession {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 425px) {
-    .profile__profession {
-        margin-top: 14px;
-        font-size: 14px;
-        line-height: 17px;
-    }
+  .profile__profession {
+    margin-top: 14px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
