--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,14 +1,17 @@
 .profile {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-top: 40px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 890px) {
-    .profile {
-        align-items: center;
-        flex-direction: column;
-        align-items: center;
-    }
+  .profile {
+    align-items: center;
+    flex-direction: column;
+    align-items: center;
+  }
 }
