--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -13,6 +13,7 @@
 @media screen and (max-width: 890px) {
   .profile__name {
     text-align: center;
+    
   }
 }
 
@@ -20,5 +21,6 @@
   .profile__name {
     font-size: 27px;
     line-height: 33px;
+    max-width: 90%;
   }
 }
